--- a/app/views/admin/carriages/_first_class_carriage.html.slim
+++ b/app/views/admin/carriages/_first_class_carriage.html.slim
@@ -1,2 +1,4 @@
-strong = t('.place_quantity')
-= carriage.bottom_places
+li.list-group-item
+  strong = t('.place_quantity')
+  span.badge
+    = carriage.bottom_places
