--- a/app/views/admin/carriages/_form.html.slim
+++ b/app/views/admin/carriages/_form.html.slim
@@ -1,28 +1,28 @@
 = form_for [:admin, @train, carriage.becomes(Carriage)] do |f|
   = render 'common/errors', resource: carriage
-  .field
-    p
+  .form-group
     - if carriage.new_record?
-      = f.collection_select :type, Carriage::CAR_TYPES, :first, :last
+      = f.collection_select :type, Carriage::CAR_TYPES, :first, :last, {},
+        {class: 'form-control'}
     - else
       strong = t('common.carriage_type')
       = Carriage::CAR_TYPES[carriage.type]
 
-  .field
+  .form-group
     = f.label :upper_places, t('admin.carriages.second_class_carriage.place_upper_quantity')
-    = f.number_field :upper_places
-  .field
+    = f.number_field :upper_places, class: 'form-control'
+  .form-group
     = f.label :bottom_places, t('admin.carriages.second_class_carriage.place_bottom_quantity')
-    = f.number_field :bottom_places
-  .field
+    = f.number_field :bottom_places, class: 'form-control'
+  .form-group
     = f.label :side_upper_places, t('admin.carriages.third_class_carriage.place_side_upper_quantity')
-    = f.number_field :side_upper_places
-  .field
+    = f.number_field :side_upper_places, class: 'form-control'
+  .form-group
     = f.label :side_bottom_places, t('admin.carriages.third_class_carriage.place_side_bottom_quantity')
-    = f.number_field :side_bottom_places
+    = f.number_field :side_bottom_places, class: 'form-control'
 
-  .field
+  .form-group
     = f.label :train, t('common.train_number')
-    = f.collection_select :train_id, Train.all, :id, :number
+    = f.collection_select :train_id, Train.all, :id, :number, {}, {class: 'form-control'}
   .actions
-    = f.submit 'Сохранить'
+    = f.submit t('common.save'), class: 'btn btn-primary'
