--- a/app/views/admin/carriages/_second_class_carriage.html.slim
+++ b/app/views/admin/carriages/_second_class_carriage.html.slim
@@ -1,5 +1,8 @@
-strong = t('.place_upper_quantity')
-= carriage.upper_places
-br
-strong = t('.place_bottom_quantity')
-= carriage.bottom_places
+li.list-group-item
+  strong = t('.place_upper_quantity')
+  span.badge
+    = carriage.upper_places
+li.list-group-item
+  strong = t('.place_bottom_quantity')
+  span.badge
+    = carriage.bottom_places
