--- a/app/views/admin/carriages/show.html.slim
+++ b/app/views/admin/carriages/show.html.slim
@@ -1,17 +1,20 @@
-p
-  strong = t('.carriage_number')
-  = @carriage.number
-p
-  strong = t('.carriage_type')
-  = Carriage::CAR_TYPES[@carriage.type]
-p
+ul.list-grout
+  li.list-group-item
+    strong = t('.carriage_number')
+    span.badge
+      = @carriage.number
+  li.list-group-item
+    strong = t('.carriage_type')
+    span.badge
+      = Carriage::CAR_TYPES[@carriage.type]
   = render @carriage.class.to_s.underscore, carriage: @carriage
-p
-  strong = t('common.train_number')
-  - if @carriage.train
-    = link_to "#{@carriage.train.number}", [:admin, @carriage.train]
-  - else
-    | Поезд не назначен
+  li.list-group-item
+    strong = t('common.train_number')
+    span.badge
+      - if @carriage.train
+        = link_to "#{@carriage.train.number}", [:admin, @carriage.train]
+      - else
+        | Поезд не назначен
 = link_to t('common.edit'), edit_admin_carriage_path(@carriage)
 | \
 = link_to t('common.back'), admin_train_carriages_path(@carriage.train)
