--- a/app/views/admin/railway_stations/_form.html.slim
+++ b/app/views/admin/railway_stations/_form.html.slim
@@ -1,7 +1,7 @@
 = form_for [:admin, railway_station] do |f|
   = render 'common/errors', resource: railway_station
-  .field
+  .form-group
     = f.label :title
-    = f.text_field :title
-  .actions
-    = f.submit t('.submit', action: @railway_station.new_record? ? 'Создать' : 'Изменить')
+    = f.text_field :title, class: 'form-control'
+  .form-group
+    = f.submit t('.submit', action: @railway_station.new_record? ? 'Создать' : 'Изменить'), class: 'btn btn-primary'
