--- a/app/views/admin/railway_stations/show.html.slim
+++ b/app/views/admin/railway_stations/show.html.slim
@@ -1,6 +1,8 @@
-p
-  strong = t('.title')
-  = @railway_station.title
+.panel.panel-primary
+  .panel-heading
+    strong = t('.title')
+  .panel-body
+    = @railway_station.title
 = link_to t('common.edit'), edit_admin_railway_station_path(@railway_station)
 | \
 = link_to t('common.back'), admin_railway_stations_path
