--- a/app/views/admin/routes/_time.html.slim
+++ b/app/views/admin/routes/_time.html.slim
@@ -1,4 +1,4 @@
 = form_tag update_time_admin_railway_station_path(station), method: :patch do
-  td  = datetime_field_tag attr, station.time_in(route, attr)
+  td  = datetime_field_tag attr, station.time_in(route, attr), class: 'form-control'
   td  = hidden_field_tag :route_id, route.id
-  td  = submit_tag 'Изменить'
+  td  = submit_tag 'Изменить', class: 'btn btn-primary btn-sm'
