--- a/app/views/admin/routes/show.html.slim
+++ b/app/views/admin/routes/show.html.slim
@@ -6,16 +6,15 @@ p
   - if @route.trains.empty?
     | Поездов на маршруте нет
   - else
-    ul
+    ul.list-group
       - @route.trains.each do |train|
-        li
-          = link_to "Поезд №#{train.number}", [:admin, train]
+        = link_to "Поезд №#{train.number}", [:admin, train], class: 'list-group-item'
 p
   strong Станции маршрута:
   - if @route.railway_stations.empty?
     | Станций в маршруте нет
   - else
-    table
+    table.table.table-hover
       thead
       tr
         td width = '200px' Название
@@ -30,9 +29,11 @@ p
           = render 'time', station: station, route: @route, attr: :depart_time
           td
             = form_tag update_position_admin_railway_station_path(station), method: :patch do
-              = number_field_tag :position, station.position_in(@route, :station_index)
+              .col-md-4
+                = number_field_tag :position,
+                  station.position_in(@route, :station_index), class: 'form-control'
               = hidden_field_tag :route_id, @route.id
-              = submit_tag 'Изменить'
+              = submit_tag 'Изменить', class: 'btn btn-primary btn-sm'
 
 = link_to 'Редактировать', edit_admin_route_path(@route)
 | \
