--- a/app/views/admin/routes/_route.html.slim
+++ b/app/views/admin/routes/_route.html.slim
@@ -1,5 +1,6 @@
 tr
   td= route.name
-  td= link_to 'Показать', [:admin, route]
-  td= link_to 'Реактрировать', edit_admin_route_path(route)
-  td= link_to 'Удалить', [:admin, route], method: :delete, data: { confirm: 'Are you sure?' }
+  td= link_to t('common.show'), [:admin, route]
+  td= link_to t('common.edit'), edit_admin_route_path(route)
+  td= link_to t('common.delete'), [:admin, route],
+    method: :delete, data: { confirm: 'Are you sure?' }
