--- a/app/views/admin/routes/edit.html.slim
+++ b/app/views/admin/routes/edit.html.slim
@@ -1,5 +1,5 @@
-h1 Изменение маршрута
+h1 = t('common.route')
 = render 'form', route: @route
-= link_to 'Показать', [:admin, @route]
+= link_to t('common.show'), [:admin, @route]
 | \
-= link_to 'Назад', admin_routes_path
+= link_to t('common.back'), admin_routes_path
