--- a/app/views/admin/routes/index.html.slim
+++ b/app/views/admin/routes/index.html.slim
@@ -1,10 +1,10 @@
-h1 Routes
+h1 = t('common.routes')
 table.table.table-hover
   thead
     tr
-      th Имя
+      th = t('.name')
       th { colspan: 3 }
   tbody
     = render @routes
 br/
-= link_to 'Новый маршрут', new_admin_route_path
+= link_to t('.new_route'), new_admin_route_path
