--- a/app/views/admin/routes/new.html.slim
+++ b/app/views/admin/routes/new.html.slim
@@ -1,3 +1,3 @@
-h1 Новый мрашрут
+h1 = t('common.route')
 = render 'form', route: @route
-= link_to 'Назад', admin_routes_path
+= link_to t('common.back'), admin_routes_path
