--- a/app/views/admin/routes/show.html.slim
+++ b/app/views/admin/routes/show.html.slim
@@ -1,8 +1,8 @@
 p
-  strong Имя:
+  strong = t('admin.routes.index.name')
   = @route.name
 p
-  strong Поезда на маршруте:
+  strong = t('.trains')
   - if @route.trains.empty?
     | Поездов на маршруте нет
   - else
@@ -10,17 +10,17 @@ p
       - @route.trains.each do |train|
         = link_to "Поезд №#{train.number}", [:admin, train], class: 'list-group-item'
 p
-  strong Станции маршрута:
+  strong = t('.stations')
   - if @route.railway_stations.empty?
     | Станций в маршруте нет
   - else
     table.table.table-hover
       thead
       tr
-        td width = '200px' Название
-        td { colspan = 3 } Время прибытия
-        td { colspan = 3 } Время отправления
-        td { colspan = 2 } Позиция
+        td width = '200px' = t('.title')
+        td { colspan = 3 } = t('.arrive_time')
+        td { colspan = 3 } = t('.depart_time')
+        td { colspan = 2 } = t('.position')
       tbody
       - @route.railway_stations.ordered.each do |station|
         tr
@@ -33,8 +33,8 @@ p
                 = number_field_tag :position,
                   station.position_in(@route, :station_index), class: 'form-control'
               = hidden_field_tag :route_id, @route.id
-              = submit_tag 'Изменить', class: 'btn btn-primary btn-sm'
+              = submit_tag t('.edit'), class: 'btn btn-primary btn-sm'
 
-= link_to 'Редактировать', edit_admin_route_path(@route)
+= link_to t('common.edit'), edit_admin_route_path(@route)
 | \
-= link_to 'Назад', admin_routes_path
+= link_to t('common.back'), admin_routes_path
