--- a/app/views/admin/routes/_route.html.slim
+++ b/app/views/admin/routes/_route.html.slim
@@ -3,4 +3,4 @@ tr
   td= link_to t('common.show'), [:admin, route]
   td= link_to t('common.edit'), edit_admin_route_path(route)
   td= link_to t('common.delete'), [:admin, route],
-    method: :delete, data: { confirm: 'Are you sure?' }
+    method: :delete, data: { confirm: t('common.shure?') }
