--- a/app/views/admin/tickets/_form.html.slim
+++ b/app/views/admin/tickets/_form.html.slim
@@ -1,25 +1,25 @@
 = form_for [:admin, ticket] do |f|
   .form-group
-    = f.label :user_id, "Пользователь:"
+    = f.label :user_id, t('common.user')
     = f.collection_select :user_id, User.all, :id, :email, {},
       { class: 'form-control' }
   .form-group
-    = f.label :train_id, "Поезд:"
+    = f.label :train_id, t('common.train')
     = f.collection_select :train_id, Train.all, :id, :number, {},
       { class: 'form-control' }
   .form-group
-    = f.label :start_station_id, "Начальная станция:"
+    = f.label :start_station_id, t('.start_station')
     = f.collection_select :start_station_id, @stations, :id, :title, {},
       { class: 'form-control' }
   .form-group
-    = f.label :end_station_id, "Конечная станция:"
+    = f.label :end_station_id, t('.end_station')
     = f.collection_select :end_station_id, @stations, :id, :title, {},
       { class: 'form-control' }
   .form-group
-    = f.label :passenger_name, "ФИО:"
+    = f.label :passenger_name, t('common.full_name')
     = f.text_field :passenger_name, class: 'form-control'
   .form-group
-   = f.label :passport_number, 'Номер паспорта:'
+   = f.label :passport_number, t('common.passport_number')
    = f.text_field :passport_number, class: 'form-control'
   .form-group
    = f.submit "#{ticket.new_record? ? 'Создать' : 'Изменить'}",
