--- a/app/views/admin/tickets/index.html.slim
+++ b/app/views/admin/tickets/index.html.slim
@@ -7,7 +7,7 @@ table.table.table-hover
       th = t('common.train_number')
       th = t('common.user')
       th = t('common.full_name')
-      th = t('commin.passport')
+      th = t('common.passport')
   tbody
     = render @tickets
 = link_to t('.new_ticket'), new_admin_ticket_path
