--- a/app/views/admin/routes/_time.html.slim
+++ b/app/views/admin/routes/_time.html.slim
@@ -1,4 +1,5 @@
 = form_tag update_time_admin_railway_station_path(station), method: :patch do
-  td  = datetime_field_tag attr, station.time_in(route, attr), class: 'form-control'
+  td  = datetime_field_tag arrive_time, station.time_in(route, arrive_time), class: 'form-control'
+  td  = datetime_field_tag depart_time, station.time_in(route, depart_time), class: 'form-control'
   td  = hidden_field_tag :route_id, route.id
   td  = submit_tag t('.edit'), class: 'btn btn-primary btn-sm'
