--- a/app/views/layouts/_body.html.slim
+++ b/app/views/layouts/_body.html.slim
@@ -4,13 +4,15 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href="#"Tutu
       .navbar-collapse.collapse.navbar-responsive-collapse
         ul.nav.navbar-nav
+          li = link_to 'Tutu', root_path
           - if user_signed_in?
             li= link_to t('common.exit'), destroy_user_session_path, method: :delete
             - if current_user.admin?
               li= link_to t('common.admin_interface'), admin_resources_path
+            - else
+              li= link_to t('common.tickets'), tickets_path
           - else
             li= link_to t('common.enter'), new_user_session_path
 
