--- a/app/views/admin/tickets/index.html.slim
+++ b/app/views/admin/tickets/index.html.slim
@@ -10,4 +10,5 @@ table.table.table-hover
       th = t('common.passport')
   tbody
     = render @tickets
-= link_to t('.new_ticket'), new_admin_ticket_path
+= link_to t('.new_ticket'), new_admin_ticket_path, class: 'btn btn-primary',
+  role: 'button'
