--- a/app/views/admin/railway_stations/_form.html.slim
+++ b/app/views/admin/railway_stations/_form.html.slim
@@ -1,9 +1,9 @@
-= form_for [:admin, railway_station] do |f|
-  = render 'common/errors', resource: railway_station
+= form_for [:admin, station], html: { style: "display: #{hidden ? 'none' : 'block'}" } do |f|
+  = render 'common/errors', resource: station
   .form-group
     = f.label :title
     = f.text_field :title, class: 'form-control'
   .form-group
     = f.submit t('.submit',
-      action: @railway_station.new_record? ? 'Создать' : 'Изменить'),
+      action: station.new_record? ? 'Создать' : 'Изменить'),
         class: 'btn btn-primary'
