--- a/app/views/admin/routes/_route.html.slim
+++ b/app/views/admin/routes/_route.html.slim
@@ -1,6 +1,13 @@
 tr
-  td= route.name
+  <td>
+    <div id = "route_name_#{route.id}">
+      = route.name
+    </div>
+    = render 'form', route: route, hidden: true
+  </td>
+
   td= link_to t('common.show'), [:admin, route]
-  td= link_to t('common.edit'), edit_admin_route_path(route)
+  td= link_to t('common.edit'), edit_admin_route_path(route),
+    class: 'edit_route', data: { route_id: route.id }
   td= link_to t('common.delete'), [:admin, route],
     method: :delete, data: { confirm: t('common.shure?') }
