--- a/app/views/admin/routes/new.html.slim
+++ b/app/views/admin/routes/new.html.slim
@@ -1,3 +1,3 @@
 h1 = t('common.route')
-= render 'form', route: @route
+= render 'form', route: @route, hidden: false
 = link_to t('common.back'), admin_routes_path
