--- a/app/views/admin/trains/_train.html.slim
+++ b/app/views/admin/trains/_train.html.slim
@@ -1,5 +1,11 @@
 tr
-  td= train.number
+  <td>
+    <div id = "train_number_#{train.id}">
+      = train.number
+    </div>
+    = render 'form', train: train, hidden: true
+  </td>
   td= link_to t('common.show'), [:admin, train]
-  td= link_to t('common.edit'), edit_admin_train_path(train)
+  td= link_to t('common.edit'), edit_admin_train_path(train),
+    class: 'edit_train', data: { train_id: train.id }
   td= link_to t('common.delete'), [:admin, train], method: :delete, data: { confirm: 'Are you sure?' }
