--- a/app/views/admin/trains/edit.html.slim
+++ b/app/views/admin/trains/edit.html.slim
@@ -1,5 +1,5 @@
 h1 Editing Train
-= render 'form', train: @train
+= render 'form', train: @train, hidden: false
 = link_to 'Show', [:admin, @train]
 | \
 = link_to 'Back', admin_trains_path
