--- a/app/views/admin/carriages/edit.html.slim
+++ b/app/views/admin/carriages/edit.html.slim
@@ -1,5 +1,5 @@
 h1 = t('.edit')
-= render 'form', carriage: @carriage
+= render 'form', carriage: @carriage, hidden: true
 = link_to t('common.show'), admin_carriage_path(@carriage)
 | \
 = link_to t('common.back'), admin_train_carriages_path(@carriage.train)
