--- a/app/views/admin/carriages/_edit_second_class_carriage.html.slim
+++ b/app/views/admin/carriages/_edit_second_class_carriage.html.slim
@@ -1,6 +1,6 @@
 .form-group
-  = f.label :upper_places, t('admin.carriages.second_class_carriage.place_upper_quantity')
+  = f.label :upper_places, t('common.place_upper_quantity')
   = f.number_field :upper_places, class: 'form-control'
 .form-group
-  = f.label :bottom_places, t('admin.carriages.second_class_carriage.place_bottom_quantity')
+  = f.label :bottom_places, t('common.place_bottom_quantity')
   = f.number_field :bottom_places, class: 'form-control'
