--- a/app/views/admin/carriages/_edit_third_class_carriage.html.slim
+++ b/app/views/admin/carriages/_edit_third_class_carriage.html.slim
@@ -1,12 +1,12 @@
 .form-group
-  = f.label :upper_places, t('admin.carriages.second_class_carriage.place_upper_quantity')
+  = f.label :upper_places, t('common.place_upper_quantity')
   = f.number_field :upper_places, class: 'form-control'
 .form-group
-  = f.label :bottom_places, t('admin.carriages.second_class_carriage.place_bottom_quantity')
+  = f.label :bottom_places, t('common.place_bottom_quantity')
   = f.number_field :bottom_places, class: 'form-control'
 .form-group
-  = f.label :side_upper_places, t('admin.carriages.third_class_carriage.place_side_upper_quantity')
+  = f.label :side_upper_places, t('common.place_side_upper_quantity')
   = f.number_field :side_upper_places, class: 'form-control'
 .form-group
-  = f.label :side_bottom_places, t('admin.carriages.third_class_carriage.place_side_bottom_quantity')
+  = f.label :side_bottom_places, t('common.place_side_bottom_quantity')
   = f.number_field :side_bottom_places, class: 'form-control'
